deploy/kustomize/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: github-stats
  labels:
    app.kubernetes.io/component: exporter
