deploy/kustomize/base/rabbitmq-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
    app.kubernetes.io/component: rabbitmq
spec:
  clusterIP: None
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: amqp
    - name: mgmt
      port: 15672
      targetPort: mgmt
