deploy/kustomize/base/dependencies-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-default-deny
  labels:
    app.kubernetes.io/component: redis
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes: ["Ingress", "Egress"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-allow-required
  labels:
    app.kubernetes.io/component: redis
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes: ["Ingress", "Egress"]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: github-stats-exporter
      ports:
        - protocol: TCP
          port: 6379
    - from:
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 6379
    - from:
        - podSelector:
            matchLabels:
              app: redis-sentinel
      ports:
        - protocol: TCP
          port: 6379
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq-default-deny
  labels:
    app.kubernetes.io/component: rabbitmq
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  policyTypes: ["Ingress", "Egress"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq-allow-required
  labels:
    app.kubernetes.io/component: rabbitmq
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  policyTypes: ["Ingress", "Egress"]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: github-stats-exporter
      ports:
        - protocol: TCP
          port: 5672
    - from:
        - podSelector:
            matchLabels:
              app: rabbitmq
      ports:
        - protocol: TCP
          port: 4369
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 25672
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 15672
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: rabbitmq
      ports:
        - protocol: TCP
          port: 4369
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 25672
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
